[CST-4848] Fixes requested for alert,alignment,delete button,redirect url,replaceState. Fixed unit testing

--- a/src/app/submission/sections/custom-url/submission-section-custom-url.component.scss
+++ b/src/app/submission/sections/custom-url/submission-section-custom-url.component.scss
@@ -11,6 +11,12 @@
 }
 
 .list-group-item{
+  width: 80%;
   display: flex;
   justify-content: space-between;
+}
+
+.list-item{
+  align-items: center;
+  display: flex;
 }
